[gd_scene load_steps=11 format=3 uid="uid://bksf1kg3mmq48"]

[ext_resource type="PackedScene" uid="uid://h4lhs12hvb3t" path="res://Scenes/In_Game_UI/in_game_ui.tscn" id="1_pr8hp"]
[ext_resource type="Script" path="res://Scripts/bb_modern_in_game_ui.gd" id="2_o884x"]
[ext_resource type="Theme" uid="uid://cf6v2c67q6y5n" path="res://Themes/FontTheme.tres" id="3_irhcq"]
[ext_resource type="FontFile" uid="uid://bpveyn7sb2aho" path="res://Assets/Fonts/AfacadFlux-VariableFont_slnt,wght.ttf" id="3_wh807"]
[ext_resource type="StyleBox" uid="uid://b87qtyrs1lmln" path="res://Themes/focus_button.tres" id="4_px2xt"]
[ext_resource type="StyleBox" uid="uid://bbxpk3ml1lhkj" path="res://Themes/disabled_button.tres" id="5_027pa"]
[ext_resource type="StyleBox" uid="uid://vdewpxotoj85" path="res://Themes/pressed_button.tres" id="5_mqat2"]
[ext_resource type="StyleBox" uid="uid://7h1vh5u5djjd" path="res://Themes/normal_button.tres" id="6_fj4a3"]
[ext_resource type="StyleBox" uid="uid://cq6uwucrpshjw" path="res://Themes/hover_button.tres" id="6_kxvfu"]

[sub_resource type="Theme" id="Theme_tpivg"]
resource_local_to_scene = true
default_font = ExtResource("3_wh807")
default_font_size = 40

[node name="BBModernInGameUI" instance=ExtResource("1_pr8hp")]
script = ExtResource("2_o884x")

[node name="MarginContainer" parent="." index="1"]
theme = SubResource("Theme_tpivg")

[node name="Pause" parent="MarginContainer/VBox" index="0"]
size_flags_horizontal = 2
size_flags_vertical = 0

[node name="Level" type="Label" parent="MarginContainer/VBox" index="1"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 64
text = "1"

[node name="Time" type="Label" parent="MarginContainer/VBox" index="2"]
layout_mode = 2
size_flags_horizontal = 10
text = "00:00"

[node name="RetriveBalls" type="Button" parent="MarginContainer" index="1"]
visible = false
custom_minimum_size = Vector2(256, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/focus = ExtResource("4_px2xt")
theme_override_styles/disabled = ExtResource("5_027pa")
theme_override_styles/hover = ExtResource("6_kxvfu")
theme_override_styles/pressed = ExtResource("5_mqat2")
theme_override_styles/normal = ExtResource("6_fj4a3")
text = "Retrieve Balls"

[node name="LineEdit" type="LineEdit" parent="." index="2"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -332.0
offset_top = -37.5
offset_right = 332.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_irhcq")
theme_override_styles/focus = ExtResource("4_px2xt")
theme_override_styles/read_only = ExtResource("5_mqat2")
theme_override_styles/normal = ExtResource("6_fj4a3")
placeholder_text = "Enter Name To Submit Score!"
alignment = 1
expand_to_text_length = true
clear_button_enabled = true
caret_blink = true

[connection signal="mouse_entered" from="MarginContainer/VBox/Pause" to="." method="_on_pause_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBox/Pause" to="." method="_on_pause_mouse_exited"]
[connection signal="pressed" from="MarginContainer/RetriveBalls" to="." method="_on_retrive_balls_pressed"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
